--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
 
     <corners android:radius="40dp"/>
-    <solid android:color="@android:color/holo_green_dark"/>
+    <solid android:color="@color/colorAccent" />
 </shape>
