--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     tools:context=".login.LoginActivity">
 
     <android.support.v7.widget.CardView
-        app:cardCornerRadius="16dp"
+        app:cardCornerRadius="32dp"
         android:layout_margin="32dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -27,6 +27,8 @@
             <TextView
                 android:layout_gravity="center_horizontal"
                 android:text="Login"
+                android:layout_marginBottom="40dp"
+                android:textSize="20sp"
                 android:textColor="@android:color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -51,21 +53,21 @@
                 android:layout_gravity="end"
                 android:layout_marginTop="20dp"
                 android:text="Forgot password?"
-                android:textColor="@android:color/holo_blue_light"
+                android:textColor="@color/colorBlue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <TextView
                 android:layout_gravity="end"
                 android:text="New user?"
-                android:textColor="@android:color/holo_blue_light"
+                android:textColor="@color/colorBlue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
             <Button
                 android:text="Login"
                 android:background="@drawable/background_button"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content" />
@@ -73,6 +75,7 @@
             <TextView
                 android:layout_margin="16dp"
                 android:layout_gravity="center_horizontal"
+                android:textSize="12sp"
                 android:text="Login with"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
