--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -66,7 +66,7 @@
 
             <Button
                 android:text="Login"
-                android:background="@drawable/background_button"
+                android:background="@drawable/bg_button"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="150dp"
