--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -33,6 +33,7 @@
                 android:textColor="@android:color/black" />
 
             <LinearLayout
+                android:id="@+id/shop1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -121,6 +122,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/shop2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -209,6 +211,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/shop3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
