--- a/app/src/main/res/layout/content_shop.xml
+++ b/app/src/main/res/layout/content_shop.xml
@@ -203,6 +203,7 @@
                         android:textSize="12sp" />
 
                     <Button
+                        android:id="@+id/view_more_reviews"
                         android:layout_width="wrap_content"
                         android:layout_height="40dp"
                         android:layout_marginStart="8dp"
